--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,11 @@
 
   --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas,
   "Liberation Mono", "Courier New", monospace;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100vh;
 }
 
 /* === GLOBAL === */
