--- a/src/forms/EditSnippetForm/EditSnippetForm.module.css
+++ b/src/forms/EditSnippetForm/EditSnippetForm.module.css
@@ -35,12 +35,19 @@
 
 .row {
     display: grid;
-    grid-template-columns: repeat(3, minmax(0, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(12.5rem, 1fr));
     gap: 10px;
 }
 
 .rowFull {
     display: block;
+    position: relative;
+}
+
+.rowFull button {
+    position: absolute;
+    top: 1.5rem;
+    right: 0.25rem;;
 }
 
 .field {
@@ -52,7 +59,7 @@
 .fieldFull {
     display: flex;
     flex-direction: column;
-    gap: 4px;
+    gap: 0.25rem;
 }
 
 .label {
@@ -71,10 +78,11 @@
 
 .input::placeholder {
     color: var(--text-muted);
+    font-size: 0.8rem;
 }
 
 .textarea {
-    padding: 8px 10px;
+    padding: 0.5rem 1.5rem 0.5rem 0.625rem;
     border-radius: var(--radius-md);
     border: 1px solid var(--border-subtle);
     background: var(--bg-input);
@@ -83,11 +91,14 @@
     resize: vertical;
 }
 
+.textarea::placeholder {
+    color: var(--text-muted);
+    font-size: 0.8rem;
+}
+
 .codeArea {
     font-family: var(--font-mono);
 }
-
-/* FOOTER BUTTONS */
 
 .footer {
     display: flex;
