--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -8,9 +8,15 @@
     justify-content: space-between;
 }
 
+.header {
+    display: flex;
+    gap: 0.5rem;
+    align-items: center;
+}
+
 .header-title {
-    margin: 0 0 14px 0;
-    font-size: 1.6rem;
-    font-weight: 600;
+    font-size: 1.8rem;
+    line-height: 1.8rem;
+    font-weight: 500;
     color: var(--text-primary);
 }
