--- a/src/forms/EditSnippetForm/EditSnippetForm.module.css
+++ b/src/forms/EditSnippetForm/EditSnippetForm.module.css
@@ -101,6 +101,7 @@
     font-size: 0.75rem;
     line-height: 1.2rem;
     letter-spacing: 1px;
+    word-spacing: 0.2rem;
     font-weight: 200;
 }
 
