--- a/src/forms/EditSnippetForm/EditSnippetForm.module.css
+++ b/src/forms/EditSnippetForm/EditSnippetForm.module.css
@@ -41,13 +41,6 @@
 
 .rowFull {
     display: block;
-    position: relative;
-}
-
-.rowFull button {
-    position: absolute;
-    top: 1.5rem;
-    right: 0.25rem;;
 }
 
 .field {
@@ -60,6 +53,18 @@
     display: flex;
     flex-direction: column;
     gap: 0.25rem;
+    position: relative;
+}
+
+.fieldFull button {
+    position: absolute;
+    top: 2rem;
+    right: 0.5rem;;
+}
+
+.fieldFull button svg {
+    width: 1.3rem;
+    height: 1.3rem;
 }
 
 .label {
@@ -82,7 +87,7 @@
 }
 
 .textarea {
-    padding: 0.5rem 1.5rem 0.5rem 0.625rem;
+    padding: 0.5rem 2rem 0.5rem 0.625rem;
     border-radius: var(--radius-md);
     border: 1px solid var(--border-subtle);
     background: var(--bg-input);
